[gd_scene load_steps=3 format=3 uid="uid://bnx3sv1x8pfpg"]

[ext_resource type="Theme" uid="uid://x61ckk74bynv" path="res://screens/theme/base_theme.tres" id="1_5dvya"]
[ext_resource type="Script" path="res://scenes/display_message/display_message.gd" id="2_7io0w"]

[node name="DisplayMessage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5dvya")
script = ExtResource("2_7io0w")

[node name="ProfilePanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -864.0
offset_top = -376.0
offset_right = -616.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProfileImage" type="TextureRect" parent="ProfilePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -48.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="ProfileName" type="Label" parent="ProfilePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -49.0
offset_right = -40.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="DisplayTextPanel" type="Panel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -648.0
offset_top = -336.0
offset_right = 648.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="DisplayText" type="RichTextLabel" parent="Control/DisplayTextPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -23.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
visible_characters = 0
visible_ratio = 0.0

[node name="NextWrapper" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -32.0
offset_right = -48.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0

[node name="NextButton" type="Button" parent="NextWrapper"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="OptionA" type="Button" parent="NextWrapper"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -200.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
text = "OptionA"

[node name="OptionB" type="Button" parent="NextWrapper"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -300.0
offset_bottom = -220.0
grow_horizontal = 0
grow_vertical = 0
text = "OptionB"

[node name="OptionC" type="Button" parent="NextWrapper"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -400.0
offset_bottom = -320.0
grow_horizontal = 0
grow_vertical = 0
text = "OptionC"
